# pocketsphinx

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.md  README.md  package.xml  pankaj1.py
demo/: automated.kwlist  demo.raw  goforward.fsg  goforward.gram  keywords_spk_verification.dic  keywords_spk_verification.kwlist  paresh.dic  paresh.kwlist  speaker_test.kwlist  test.dic  test.kwlist  voice_cmd.dic  voice_cmd.kwlist
demo/an4.ci_cont/: mdef  means  mixture_weights  transition_matrices  variances
demo/ci_cont_adapted/: mdef  means  mixture_weights  transition_matrices  variances
demo/cmusphinx-en-in-5.2/: README
demo/cmusphinx-en-in-5.2/en_in.cd_cont_5000/: feat.params  feature_transform  mixture_weights  noisedict  noisedict.save  transition_matrices
demo/speaker_verification/an4.ci_cont_adapt_old/: means  mixture_weights  transition_matrices  variances
demo/trained_librispeech/: kws_results_speaker_verification_librespeech
demo/trained_librispeech/8/an4.ci_cont/: transition_matrices  variances
demo/trained_librispeech/8/an4.ci_cont_adapt/: mixture_weights  variances
demo/trained_librispeech/an4.ci_cont/: mdef  means  mixture_weights  transition_matrices  variances
demo/trained_librispeech/an4.ci_cont_adapt/: means  mixture_weights  mk_flat  printp  transition_matrices  variances
demo/trained_no_star_librispeech/32/an4.ci_cont/: means  mixture_weights
demo/trained_no_star_librispeech/32/an4.ci_cont_adapt/: means  transition_matrices
examples/: execute_commands.py  speaker_verification_example.py
launch/: continuous.launch  jsgf.launch  kws_speaker_specific.launch
misc/: Untitled.ipynb  abcd.py  abcde.py  abcdef.py  automated.kwlist  record_audio.py  record_audio_simple.py  set_kws_threshold.py  voice_cmd.kwlist
nodes/: asr_test.py  combined_speaker_verification_kws_test.py  continuous.launch  jsgf.launch  jsgf_test.py  kws.launch  kws_test.py  okay_google.launch  okay_google_test.py  recognizer.py  sendAudioAsTopic.py  send_audio.py  speaker_verification_example.py  voice_cmd.kwlist  voice_cmd_vel.py  voice_control_example.py  voice_control_updated.py
speech_verification/an4/: an4.html  an4_vad.html
speech_verification/an4/bwaccumdir/an4_buff_1/: gauden_counts
speech_verification/an4/etc/: an4.dic  an4.jsgf  an4.phone  an4_test.fileids  an4_test.transcription  an4_train.fileids  an4_train.transcription  sphinx_train.cfg
speech_verification/an4/model_architecture/: an4.200.mdef  an4.alltriphones.mdef  an4.ci.mdef  an4.phonelist  an4.tree_questions  an4.untied.mdef
speech_verification/an4/model_parameters/an4.cd_cont_200/: mdef  means  mixture_weights  transition_matrices  variances
speech_verification/an4/model_parameters/an4.cd_cont_200_1/: means  mixture_weights  transition_matrices  variances
speech_verification/an4/model_parameters/an4.cd_cont_200_2/: means  mixture_weights  transition_matrices  variances
speech_verification/an4/result/: an4-1-1.match  an4.align  an4.match
speech_verification/an4/trees/an4.200/: sp-0.dtree  (+2 more)
(+2182 files in other folders)
