<?xml version="2.0"?>
<package format="2">
  <name>pocketsphinx</name>
  <version>1.0.0</version>
  <description>
    This package is a simple wrapper around the pocketsphinx speech recognizer, 
    using a Python-based interface. 
  </description>
  <author>Pankaj Baranwal</author>
  <maintainer email="pankaj11520@ducic.ac.in">Pankaj Baranwal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/pocketsphinx</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend><!-- only needed for demos -->

</package>
